ejercicios y ejemplos con objetos, arrays y querySelector

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- en este caso añadimos el script al final del contenido
     para que el HTML que añadamos de forma dinámica se muestre después -->
-    <script src="intro-variables.js"></script>
+    <script src="for.js"></script>
 </body>
 
 </html>
