--- a/arrays/index.html
+++ b/arrays/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios con arrays</title>
     <link rel="stylesheet" href="/main.css" />
+    <script src="arrays-for.js"></script>
 </head>
 
 <body>
