--- a/funciones/index.html
+++ b/funciones/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios de conversión a funciones en JavaScript</title>
     <link rel="stylesheet" href="/main.css" />
-    <script src="ejemplos-funciones.js"></script>
+    <script src="funciones.js"></script>
 </head>
 
-<body style="display: none;">
+<body>
     <h1>Ejercicios de conversión a funciones en JavaScript</h1>
 
     <p>Tenemos que convertir cada bloque de código no reutilizable en una función reutilizable, con parámetros cuando
