--- a/peliculas/index.html
+++ b/peliculas/index.html
@@ -18,6 +18,8 @@
     <!-- para mostrar la lista de películas -->
     <ul id="contenedorPelis"></ul>
 
+    <button id="btn-vaciar" class="btn">Vaciar lista</button>
+
     <script src="peliculas.js"></script>
 </body>
 
